--- a/src/pages/cardsPage/cardsDialog/cardsDialog.module.scss
+++ b/src/pages/cardsPage/cardsDialog/cardsDialog.module.scss
@@ -1,7 +1,5 @@
 .portal {
-  overflow-y: auto;
   width: 542px;
-  max-height: 80vh;
 
   .form {
     margin-top: 24px;
@@ -11,9 +9,10 @@
     }
 
     img {
-      margin-top: 15px;
       width: 100%;
       max-height: 250px;
+      margin-top: 15px;
+
       object-fit: cover;
       border-radius: 2px;
     }
